Ready for submission

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
+    <div>
       <!-- Standard button -->
       <a href="index.html" class="name">Ken Thompson</a>
     </div>
@@ -44,52 +44,52 @@
         <h2 class="leftSecHeader">Portfolio</h2>
 
         <div class="row">
-            <div class="col-md-6">
-              <div class="portImg">
-                 <a class="portLinks" href="https://github.com/coasterken" target="_blank"><img src="assets/images/transport.jpg" alt="transportation">
-                </a>
-                  <p class="portTxt">transportation</p>
-              </div>  
+          <div class="col-md-6">
+            <div class="portImg">
+               <a class="portLinks" href="https://github.com/coasterken" target="_blank"><img src="assets/images/transport.jpg" alt="transportation">
+              </a>
+                <p class="portTxt">transportation</p>
             </div>  
-            <div class="col-md-6">
-              <div class="portImg">
-                <a class="portLinks" href="https://github.com/coasterken" target="_blank"><img src="assets/images/nature.jpg" alt="nature">
-                </a>
-                   <p class="portTxt">nature</p>
-               </div>       
-            </div>
+          </div>  
+          <div class="col-md-6">
+            <div class="portImg">
+              <a class="portLinks" href="https://github.com/coasterken" target="_blank"><img src="assets/images/nature.jpg" alt="nature">
+              </a>
+                 <p class="portTxt">nature</p>
+             </div>       
+          </div>
         </div>
   
 
         <div class="row">
-            <div class="col-md-6">
-              <div class="portImg">
-                 <a class="portLinks" href="https://github.com/coasterken" target="_blank"><img src="assets/images/food.jpg" alt="food">
-                 </a>
-                    <p class="portTxt">food</p>
-              </div>
-            </div>  
+          <div class="col-md-6">
+            <div class="portImg">
+               <a class="portLinks" href="https://github.com/coasterken" target="_blank"><img src="assets/images/food.jpg" alt="food">
+               </a>
+                  <p class="portTxt">food</p>
+            </div>
+          </div>  
 
-            <div class="col-md-6">
-               <div class="portImg">
-                <a class="portLinks" href="https://github.com/coasterken" target="_blank"><img src="assets/images/edm.jpg" alt="edm">
-                </a>
-                <p class="portTxt">edm</p>
-            </div>  
-            </div>            
+          <div class="col-md-6">
+             <div class="portImg">
+              <a class="portLinks" href="https://github.com/coasterken" target="_blank"><img src="assets/images/edm.jpg" alt="edm">
+              </a>
+              <p class="portTxt">edm</p>
+          </div>  
+          </div>            
         </div>
 
         <div class="row">
-            <div class="col-md-6">
-              <div class="portImg">
-                <a class="portLinks" href="https://github.com/coasterken" target="_blank"><img src="assets/images/animals.jpg" alt="animals">
-                </a>
-                  <p class="portTxt">animal</p>
-              </div>  
+          <div class="col-md-6">
+            <div class="portImg">
+              <a class="portLinks" href="https://github.com/coasterken" target="_blank"><img src="assets/images/animals.jpg" alt="animals">
+              </a>
+                <p class="portTxt">animal</p>
             </div>  
-            <div class="col-md-6">
-              <!-- Nothing here -->
-            </div>            
+          </div>  
+          <div class="col-md-6">
+            <!-- Nothing here -->
+          </div>            
         </div>
       </section>
     </div>
@@ -109,12 +109,12 @@
   </div>
 </div>
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="container-fluid text-center">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <p class="navbar-text">&copy; Copyright 2017 Ken Thompson </p>
-  </div><!-- /.container-fluid -->
-</nav>
+<!-- Copyright footer -->
+<div class="navbar-default navbar-fixed-bottom">
+  <div class="container-fluid myfooter">
+   <div >&copy; Copyright 2017 Ken Thompson </div>
+  </div>
+</div>
 </body>
 
 </html>
