--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
+    <div>
       <!-- Standard button -->
       <a href="index.html" class="name">Ken Thompson</a>
     </div>
@@ -72,12 +72,14 @@
   </div>
 </div>
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
- <div class="container-fluid text-center">
-<!-- Brand and toggle get grouped for better mobile display -->
-    <p class="navbar-text">&copy; Copyright 2017 Ken Thompson </p>
-  </div><!-- /.container-fluid -->
-</nav>
+
+  <!-- Copyright footer -->
+<div class="navbar-default navbar-fixed-bottom">
+  <div class="container-fluid myfooter">
+   <div >&copy; Copyright 2017 Ken Thompson </div>
+  </div>
+</div>
+
 
 </body>
 </html>
