Prepped for Homework 2

--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!-- This html is for homework number 1 - recommended project -->
+<!-- This html is for homework number 2 - Bootstrap portfolio -->
 <!--  index.html is the main page - aka About Me page -->
 <!DOCTYPE html>
 
